--- a/Finnish/main/XiaomiAccount.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/XiaomiAccount.apk/res/values-fi-rFI/strings.xml
@@ -34,9 +34,6 @@
   <string name="account_none_binded_info">Ei mitään</string>
   <string name="account_none_user_name">Ei mitään</string>
   <string name="account_notification_message">&gt;Istunto vanhentui. Kirjaudu sisään uudelleen.</string>
-  <string name="account_protection">Tilin suojaaminen</string>
-  <string name="account_protection_off">Pois päältä</string>
-  <string name="account_protection_on">Päällä</string>
   <string name="account_secure_info_pref_title">Tilitiedot</string>
   <string name="account_security">Tilin turvallisuus</string>
   <string name="account_security_info_pref_title">Turvallisuustiedot</string>
@@ -49,22 +46,15 @@
   <string name="account_user_base_info">Henkilökohtaiset tiedot</string>
   <string name="account_user_birthday">Syntymäpäivä</string>
   <string name="account_user_details">Henkilökohtaiset tiedot</string>
-  <string name="account_user_education">Koulutus</string>
   <string name="account_user_email">Sähköposti</string>
   <string name="account_user_gender">Sukupuoli</string>
   <string name="account_user_id">Mi Tilin ID</string>
-  <string name="account_user_income">Tulot</string>
-  <string name="account_user_location">Sijainti</string>
-  <string name="account_user_location_title">Valitse nykyinen sijainti</string>
   <string name="account_user_name">Nimi</string>
   <string name="account_user_name_dialog_title">Syötä käyttäjänimi</string>
   <string name="account_user_other_info">Lisää lähteitä</string>
   <string name="account_user_phone">Puhelin</string>
   <string name="account_user_recovery_phone">Palautuspuhelin</string>
   <string name="account_user_region">Maakunta</string>
-  <string name="account_user_using_facebook_avatar">Käytä Facebookin profiilikuvaa</string>
-  <string name="account_user_using_qq_avatar">Käytä QQ:n profiilikuvaa</string>
-  <string name="account_user_using_weibo_avatar">Käytä Sina Weibon profiilikuvaa</string>
   <string name="account_xiaomi_service">Palvelut</string>
   <string name="action_add_phone">Lisää puhelinnumero</string>
   <string name="action_update_phone">Muuta puhelinnumeroa</string>
@@ -93,31 +83,23 @@
   <string name="completed">Kaikki valmiina!</string>
   <string name="confirm_activate_email">Todennettu</string>
   <string name="confirm_bundled_phone_dialog_title">Vahvista liitetty puhelinnumero</string>
-  <string name="confirm_delete_app_message">Sovelluksen poistamisen jälkeen, sinun täytyy vahvistaa puhelinnumerosi seuraavalla kerralla, kun kirjaudut sovelluksella sisään Mi Tililläsi.</string>
-  <string name="confirm_delete_browser_message">Tämän selaimen poistamisen jälkeen, sinun täytyy vahvistaa puhelinnumerosi seuraavalla kerralla, kun kirjaudut sovelluksella sisään Mi Tililläsi.</string>
-  <string name="confirm_delete_device_message">Tämän laitteen poistamisen jälkeen, sinun täytyy vahvistaa puhelinnumerosi seuraavalla kerralla, kun kirjaudut sisään Mi Tililläsi.</string>
+  <string name="confirm_new_pwd">Vahvista uusi salasana</string>
   <string name="confirm_phone_number_dialog_message">Vahvistuskoodi lähetetään numeroon %s.</string>
   <string name="confirm_phone_number_dialog_title">Vahvista puhelinnumero</string>
   <string name="confirm_unbind">Katkaistaanko yhteys tähän tiliin?</string>
   <string name="confirm_unbundled_phone_dialog_message">Puhelinnumero %1$s on liitetty Mi Tiliin %2$s. Se ei ole enää liitettynä Mi Tiliin %3$s jos jatkat. Jatketaanko?</string>
   <string name="continue_action">Jatka</string>
-  <string name="current_location_title">Nykyinen sijainti</string>
   <string name="delete_action">Poista</string>
-  <string name="delete_app">Poista sovellus</string>
   <string name="delete_bank_card_message">Mi Pay -pankkikortit ja NFC-kortit poistetaan uloskirjautumisen jälkeen.</string>
   <string name="delete_bank_card_title">Huomio</string>
-  <string name="delete_browser">Poista selain</string>
-  <string name="delete_device">Poista laite</string>
   <string name="delete_device_btn">Poista</string>
   <string name="delete_device_failed">Laitetta ei voi poistaa</string>
   <string name="delete_device_notice">Kun laite on poistettu, se kirjautuu ulos Mi Tililtäsi automaattisesti. Et voi enää käyttää tätä laitetta kuvien, viestien ja muun sisällön näkemiseen tililläsi.</string>
-  <string name="delete_lock_device_success">Poistettiin onnistuneesti</string>
   <string name="device_delete_success_message">Jos et kirjautunut sisään tällä laitteella, vaihda salasanasi välittömästi.</string>
   <string name="device_delete_success_title">Kirjauduttiin ulos</string>
   <string name="device_list__header">Laitteeni</string>
   <string name="device_list_title">Laitteeni</string>
   <string name="device_name">Laitteen nimi</string>
-  <string name="device_trust_info">Luotetut laitteet</string>
   <string name="diagnosis_log_send_failed">Lokia ei voitu lähettää.</string>
   <string name="diagnosis_log_sent_format">"Loki lähetettiin onnistuneesti.
 ID: %s
@@ -148,7 +130,6 @@ Lähetä tämä koodi valvojalle."</string>
   <string name="find_device_request_error">Tapahtui palvelinvirhe, odota minuutti tai kaksi ja yritä uudelleen</string>
   <string name="find_device_request_prepare_error">Tilan saanti epäonnistui, yritä myöhemmin uudelleen</string>
   <string name="find_device_unknown_error">Laitteen tilan saanti epäonnistui, odota minuutti tai kaksi ja yritä uudelleen</string>
-  <string name="first_login_time">Ensimmäinen kirjautumisyritys: %s</string>
   <string name="for_diagnosis_usage_only">Käytetään vain ongelmien paikallistamiseksi.</string>
   <string name="get_back_pwd">Salasanan palauttaminen</string>
   <string name="get_device_list_failed">Laitteita ei voitu hakea</string>
@@ -156,21 +137,21 @@ Lähetä tämä koodi valvojalle."</string>
   <string name="get_phone_verifycode_exceed_limit">Liian monta vahvistuskoodia on lähetetty tälle numerolle. Odota 24 tuntia ja yritä uudelleen.</string>
   <string name="guest_account_label">Mi Vierastili</string>
   <string name="identity">Tunnistaminen</string>
+  <string name="inconsistent_pwd">Salasanat eivät täsmää</string>
   <string name="input_email_address_notice">Käytämme tätä sähköpostia tilisi vahvistamiseen</string>
+  <string name="input_new_pwd">Anna uusi salasana</string>
   <string name="io_error_title">Vahvista verkkosi</string>
   <string name="just_a_second">Odota hetki…</string>
   <string name="loading_micloud_sync_data">Odota hetki…</string>
-  <string name="local_device">(tämä laite)</string>
-  <string name="locating_current_location">Sijainti</string>
-  <string name="location_service_not_working">Sijaintipalvelu ei toimi</string>
   <string name="login_check_find_device">Haetaan laitteen turvallisuustietoa…</string>
   <string name="login_check_find_device_failed_title">Laitteen turvallisuustietoa ei voitu tarkistaa</string>
   <string name="login_find_device_bind">Tämä laite on liitettynä jo olemassa olevaan Mi Tilin ID-numeroon (%s).</string>
-  <string name="login_guard_prompt">Vaadi puhelinnumeron vahvistusta, kun kirjaudut Mi Tililläsi tuntemattomalla laitteella tai tuntemattomalla sovelluksella ensimmäistä kertaa.</string>
   <string name="logout_account">Kirjaudu ulos</string>
   <string name="logout_failed">Uloskirjautuminen epäonnistui</string>
   <string name="mi_account_identity_title">Vahvista henkilöllisyytesi</string>
-  <string name="mi_vip_info">Näytä oikeudet</string>
+  <string name="mi_finance">Talouteni</string>
+  <string name="mi_finance_info">Bonukset uusille käyttäjille</string>
+  <string name="mi_vip_info">Näytä etuoikeudet</string>
   <string name="mipay">Maksu</string>
   <string name="mipay_balance">Saldo</string>
   <string name="mipay_bank_card">Pankkikortti</string>
@@ -198,7 +179,6 @@ Lähetä tämä koodi valvojalle."</string>
   <string name="oauth_scopes_intro">%2$s saa seuraavat käyttöoikeudet: %3$s</string>
   <string name="oauth_title">Kirjaudu Mi Tilillä</string>
   <string name="ok">OK</string>
-  <string name="other_devices_title">Muut laitteet</string>
   <string name="passport_Resend">Lähetä uudelleen</string>
   <string name="passport_access_denied">Pääsy kielletty</string>
   <string name="passport_account_hint_text">Sähköpostiosoite/Puhelinnumero/Mi Tilin ID</string>
@@ -414,7 +394,6 @@ Aktivoi tilisi seuraamalla
   <string name="passport_wrong_vcode">Antamasi koodi on virheellinen</string>
   <string name="passport_wrong_voice">Antamasi koodi on virheellinen</string>
   <string name="passport_yes">Kyllä</string>
-  <string name="phone_activated">%s aktivoitu</string>
   <string name="phone_num_use_for">Puhelinnumeroa käytetään:</string>
   <string name="photoPickerNotFoundText">Kuvia ei saatavilla.</string>
   <string name="push_notification_content">Hae vahvistuskoodi</string>
@@ -424,11 +403,7 @@ Aktivoi tilisi seuraamalla
   <string name="qq">QQ</string>
   <string name="recycle_phone_notification_msg">Näyttää siltä, että puhelinnumerosi on kierrätetty. Napauta päivittääksesi.</string>
   <string name="recycle_phone_notification_title">Mi Tilin tietoturvariski</string>
-  <string name="remove_device_success_notice">Jos poistat tämän laitteen luotetuista laitteista, saatat joutua tekemään vahvistusprosessin uudelleen, kun kirjaudut sisään.​</string>
-  <string name="remove_trust_btn">Poista luotetuista laitteista</string>
-  <string name="remove_trust_notice">Poista luotetuista laitteista ja kirjaudu ulos</string>
   <string name="removing_account">Kirjaudutaan ulos…</string>
-  <string name="rename_current_device">Vaihda laitteen nimeä</string>
   <string name="replace_binded_phone">Korvaa puhelin</string>
   <string name="resend_active_email">Lähetä uudelleen</string>
   <string name="resend_email_reach_limit_message">Olet pyytänyt liian monta vahvistus sähköpostia. Varmista, ettei vahvistussähköposti ole mennyt sähköpostisi roskapostikansioon.</string>
@@ -437,6 +412,7 @@ Aktivoi tilisi seuraamalla
   <string name="restart_action">Aloita alusta</string>
   <string name="restart_phone_bind_message">Tekstiviestin saapumisessa saattaa kestää hetki. Aloitetaanko alusta tästä huolimatta?</string>
   <string name="restart_phone_bind_title">Vaihda palautuspuhelin</string>
+  <string name="same_new_and_old_pwd">Ei voi olla sama, kuin nykyinen salasana</string>
   <string name="scan_barcode_title">Kirjaudu Mi Tilillesi skannaamalla QR-koodi</string>
   <string name="search_account_security">Tilin tietoturva</string>
   <string name="search_account_security_desc">Tilin Asetukset</string>
@@ -452,13 +428,13 @@ Aktivoi tilisi seuraamalla
   <string name="search_user_detail_desc">Henkilökohtaiset tiedot</string>
   <string name="search_user_detail_path">Asetukset/Mi Tili/Henkilökohtaiset tiedot</string>
   <string name="search_user_detail_top_key_words">Henkilökohtaiset tiedot,Vaihda Profiilikuva,Vaihda Käyttäjänimi,Vaihda Lempinimi,Vaihda Syntymäaika,Vaihda Sukupuoli</string>
-  <string name="select_location_title">Valitse sijaintisi</string>
   <string name="send_diagnosis_log">Lähetä diagnostiikkaloki</string>
   <string name="send_email_activate_message">Vahvistussähköposti lähetetty</string>
   <string name="sending">Lähetetään…</string>
   <string name="service_error">Palveluvirhe</string>
   <string name="set_success">Muutettiin onnistuneesti</string>
   <string name="sign_in">Kirjaudutaan sisään</string>
+  <string name="sim_card">SIM-kortti</string>
   <string name="sim_changed_notification_msg">Napauta päivittääksesi palautuspuhelimesi ja pidä tilisi turvallisempana.</string>
   <string name="sim_changed_notification_title">Vaihdoitko puhelinnumeroa?</string>
   <string name="sina_weibo">Sina Weibo</string>
@@ -466,8 +442,6 @@ Aktivoi tilisi seuraamalla
   <string name="sns_access_token_expired_warning">Tilin kirjautuminen on vanhentunut. Yhdistä tili uudelleen kirjautumalla sisään uudelleen.</string>
   <string name="talkback_scan_barcode">Skannaa QR-koodi</string>
   <string name="temporary_not_available">Tämä toiminto ei ole vielä käytettävissä.</string>
-  <string name="trusted_browsers">Luotetut selaimet</string>
-  <string name="trusted_browsers_prompt">Selain ei ole enää luotettu jos poista evästeet.</string>
   <string name="turn_off_find_device_failed_title">Laitteen etsintää ei voi sammuttaa</string>
   <string name="turning_off_find_device">Poistetaan Etsi laite -toiminto käytöstä…</string>
   <string name="unbind_sns_description">Kun katkaiset yhteyden tähän tiliin, et voi enää käyttää %s tilitietojasi Mi Tilin kirjautumiseen.</string>
@@ -475,18 +449,13 @@ Aktivoi tilisi seuraamalla
 1. Jos unohdit salasanasi, mene id.mi.com palauttaaksesi sen.
 2. Jos et voi palauttaa salasanaasi tai joku toinen on lukinnut laitteesi, mene osoitteeseen i.mi.com avataksesi lukituksen.
 3. Lukituksen avausnumerosi: %s"</string>
-  <string name="update_contacts">Päivitä yhteystiedot</string>
   <string name="update_email_address_dialog_message">Sinun täytyy vahvistaa henkilöllisyytesi ennen kuin voit päivittää sähköpostin.</string>
   <string name="update_email_address_dialog_title">Päivitä Sähköposti</string>
   <string name="update_phone_notice">Muuta tietoturva-asetuksia</string>
   <string name="update_phone_number_notice_message">Sinun täytyy vahvistaa henkilöllisyytesi ennen kuin voit päivittää puhelinnumerosi.</string>
-  <string name="updated_nothing">Päivitetty</string>
+  <string name="used_cloud_storage_info">Tallennustilaa käytetty %s</string>
   <string name="user_avatar_update_title">Vaihda profiilikuva</string>
   <string name="user_avatar_uploading">Odota hetki…</string>
-  <string name="verified_apps">Vahvistetut sovellukset</string>
-  <string name="verified_devices">Vahvistetut laitteet</string>
-  <string name="verify_phone_prompt">Valitse vahvistettava puhelinnumero</string>
-  <string name="verify_phone_title">Vahvista puhelinnumero</string>
   <string name="vip_account_settings">VIP Asetukset</string>
   <string name="vip_settings_info">VIP asetukset</string>
   <string name="xiao_mi_vip">Mi VIP</string>
