--- a/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
@@ -1277,7 +1277,7 @@ Jos otat datan uudelleen käyttöön, operaattorisi saattaa laskuttaa siitä."</
   <string name="description_direction_up">"Liu'uta ylös ja %s."</string>
   <string name="description_image_button_answer">Vastaa</string>
   <string name="description_image_button_reject">Hylkää</string>
-  <string name="description_image_icon_sim_card">SIM-kortti %1$d</string>
+  <string name="description_image_icon_sim_card">SIM %1$d</string>
   <string name="description_target_search">Haku</string>
   <string name="dev_logpersist_clear_warning_message">Kun lopetamme valvonnan laitteella pysyvästi olevalla lokityökalulla, meidän täytyy poistaa kaikki laitteellesi tallennetut lokityökalun tiedot.</string>
   <string name="dev_logpersist_clear_warning_title">Tyhjennetäänkö lokityökalun pysyvä tallennustila?</string>
